--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Dosis", sans-serif;
+  font-family: "Noto Serif", sans-serif;
 }
 
 /*Header*/
@@ -40,16 +40,20 @@ header {
 .home_text h2 {
   color: #ffffff;
   font-size: 44px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   text-transform: uppercase;
   letter-spacing: 13px;
+  font-weight: 900;
   -webkit-text-stroke: 2px #000;
 }
 .home_text p {
-  color: #291212;
-  font-size: 18px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: rgb(192, 240, 21);
+  font-size: 24px;
+  font-family: 'Georgia',serif, sans-serif;
   text-transform: uppercase;
-  /* -webkit-text-stroke: 0.3px rgb(245, 243, 243); */
+  font-weight: bold;
+  /* -webkit-text-stroke: 0.5px rgb(216, 230, 26); */
+  background-color: rgb(0, 0, 0);
 }
 .home_text img {
 }
@@ -167,7 +171,7 @@ header {
 
 /*Fun Facts*/
 .fun_facts {
-  background: url(../images/header_bg.jpg);
+  background: url(../images/header_bg.png);
   background-attachment: fixed !important;
   background-repeat: repeat;
 }
@@ -179,7 +183,7 @@ header {
   padding-top: 120px;
 }
 .single_count i {
-  color: #f73b56;
+  color: #c5f73b;
   font-size: 24px;
 }
 .single_count h3 {
@@ -203,7 +207,7 @@ header {
   height: 1px;
   left: 0;
   bottom: -4px;
-  background: #ef4251;
+  background: #c5f73b;
 }
 .imac {
   position: relative;
@@ -262,7 +266,7 @@ header {
   top: 54px;
   left: 20px;
   color: #fff;
-  font-size: 14px;
+  font-size: 24px;
   /* text-transform: uppercase; */
 }
 .no_padding {
