--- a/css/style.css
+++ b/css/style.css
@@ -34,28 +34,33 @@ header {
   background: rgba(250, 250, 250, 0.5);
 }
 .home_text {
-  padding-top: 210px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding-bottom: 210px;
+  padding-top: 210px;
 }
-.home_text h2 {
+.home_text h1 {
   color: #ffffff;
-  font-size: 44px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  text-transform: uppercase;
+  font-family: "Roboto Slab", Arial, sans-serif;
+  font-size: 58px;
+  font-weight: bold;
   letter-spacing: 13px;
-  font-weight: 900;
-  -webkit-text-stroke: 2px #000;
+  text-transform: uppercase;
+  -webkit-text-stroke: 6px rgba(0, 0, 0, 0.534);
 }
 .home_text p {
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
   color: rgb(192, 240, 21);
+  font-family: "Lora", serif, sans-serif;
   font-size: 24px;
-  font-family: 'Georgia',serif, sans-serif;
-  text-transform: uppercase;
   font-weight: bold;
+  padding: 0 15px;
+  text-transform: uppercase;
+  width: fit-content;
   /* -webkit-text-stroke: 0.5px rgb(216, 230, 26); */
-  background-color: rgb(0, 0, 0);
-}
-.home_text img {
 }
 .scroll_down {
   padding-bottom: 50px;
@@ -68,6 +73,10 @@ header {
 }
 
 /*Services*/
+.service-element {
+  display: flex;
+  justify-content: space-between;
+}
 .services {
   padding-top: 96px;
 }
@@ -96,11 +105,17 @@ header {
   overflow: hidden;
   background-color: #d5d5d5;
   border-radius: 0px;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 .single_progress_bar .progress-bar {
-  background-color: #2d3334;
+  background-color: #0acdef;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.single_progress_bar .progress:hover {
+  height: 8px;
+  border-radius: 4px;
 }
 .single_progress_bar h2 {
   color: 000;
